# Db

./: .gitignore  .gitmodules  ARCHITECTURE_UPDATE.md  AUTO_GENERATION.md  Db Language Reference.md  Db.slnx  README.md  TODO.md  copilot-instructions.md
Dbuild/: CMakeLists.txt  CppBuildSystem.cs  CppHeaderToDbStub.cs  DbFileWatcher.cs  Dbuild.csproj  HeaderFolderWatcher.cs  IStubConverter.cs  Program.cs  RepresentsAttribute.cs  StubEmitter.cs  StubEntry.cs  StubLoader.cs  StubRegistry.cs  Transpiler.cs
Dbuild/NewProjectDefaultDirectory/Project/: ReadMe.txt
Dbuild/NewProjectDefaultDirectory/Project/Source/Db/: Linq.db  Log.db  LogStream.db  LogStream.stub  MessageType.db  MessageType.stub  Settings.db  Settings.stub
Dbuild/NewProjectDefaultDirectory/Project/Stubs/BOOST/Events/: Connection.stub  Signal.stub
Dbuild/NewProjectDefaultDirectory/Project/Stubs/BOOST/IO/: Directory.stub  DirectoryEntry.stub  File.stub  Path.stub
Dbuild/NewProjectDefaultDirectory/Project/Stubs/BOOST/Math/: Distributions.stub  Math.stub  MathSpecial.stub  Quaternion.stub
Dbuild/NewProjectDefaultDirectory/Project/Stubs/BOOST/Net/: Application.stub  ErrorCode.stub  (+3 more)
Dbuild/NewProjectDefaultDirectory/Project/Stubs/Compress/: Deflate.stub
Dbuild/NewProjectDefaultDirectory/Project/Stubs/Crypto/: Crypto.stub
Dbuild/NewProjectDefaultDirectory/Project/Stubs/Db/: AddressAttribute.stub  CodePart.stub  ConstAttribute.stub  ExplicitAttribute.stub  FriendAttribute.stub  HeapAttribute.stub  Language.stub  MemberAccess.stub  MutableAttribute.stub  NakedAttribute.stub  NoexceptAttribute.stub  ReferenceAttribute.stub  RepresentsAttribute.stub  StackAttribute.stub
Dbuild/NewProjectDefaultDirectory/Project/Stubs/GMP/: BigDecimal.stub  BigFloat.stub  BigInteger.stub  BigRational.stub
Dbuild/NewProjectDefaultDirectory/Project/Stubs/Json/: JsonValue.stub
Dbuild/NewProjectDefaultDirectory/Project/Stubs/Linear/: Linear.stub
Dbuild/NewProjectDefaultDirectory/Project/Stubs/Log/: Logger.stub
Dbuild/NewProjectDefaultDirectory/Project/Stubs/Sqlite/: Sqlite.stub
Dbuild/NewProjectDefaultDirectory/Project/Stubs/Standard/: Algorithm.stub  Any.stub  Array.stub  Bitset.stub  Boolean.stub  Byte.stub  Char.stub  Chrono.stub  Decimal.stub  Deque.stub  Dict.stub  Dictionary.stub  Double.stub  Filesystem.stub  FormatAndSpan.stub  ForwardList.stub  Function.stub  Futures.stub  Int16.stub  Int32.stub  Int64.stub  Linq.stub  List.stub  Map.stub  MultiMap.stub  Multiset.stub  Optional.stub  Pair.stub  PriorityQueue.stub  Queue.stub  Random.stub  Regex.stub  SByte.stub  Set.stub  SharedPtr.stub  Single.stub  Stack.stub  Static.stub  Streams.stub  String.stub  (+13 more)
(+28 files in other folders)
